changed style and fixed tables in the shift part of frontend

--- a/MinVakt/src/main/webapp/css/shift-style.css
+++ b/MinVakt/src/main/webapp/css/shift-style.css
@@ -2,12 +2,14 @@ body{
     font-family: 'Georgia', 'sans-serif';
 }
 #header{
+
+
     position: relative;
     top:0;
     left:0;
     width:100%;
     height: 100px;
-    background-color: #0066ff;
+    background-color: #6D7993;
     padding: 0;
 }
 
@@ -135,16 +137,18 @@ footer{
 
 .dropdown {
     overflow: hidden;
-    margin: auto;
     position: relative;
     text-align:center;
-    width: 70%;
+    width: 75%;
     max-height: 60px;
-    transition: 0.2s cubic-bezier(1, 0, 1, 0);
+    transition: 0.5s ease-in-out;
+    margin-bottom: 10px;
+    margin-right: auto;
+    margin-left: auto;
 }
 .dropdown-button{
-    width: 99%;
-    height: 50px;
+    width: 100%;
+    height: 60px;
     position: relative;
 
     /*background-color: #0066ff;
@@ -157,23 +161,36 @@ footer{
     color: black;
     font-size: 20px;*/
 
-    background-color: #6d81a6;
+    background-color: #6D7993;
     font-family: 'Georgia', 'sans-serif';
-    color: black;
-    font-size: 20px;
+    font-weight: 300;
+    color: white;
+    font-size: 2.5rem;
 
-
-    border: 2px solid #555555;
-
+    border: 2px solid #6D7993;
     text-decoration: none;
-    margin: 4px 2px;
+    margin-bottom: -1px;
+
 }
 
 .dropdown-active{
-    max-height: 1280px;
+    border-bottom: #6D7993 20px;
+    margin-bottom: 0;
+    max-height: 445px;
 }
 
-.table{
+tr { line-height: 34px; text-align: center}
+tr:nth-child(even) {background: #D5D5D5}
+th {background: #6D7993; color:white; text-align: center}
+
+button:focus {outline:0;}
+
+.table-div{
+
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 
 }
 
@@ -181,3 +198,10 @@ footer{
     padding-top: 8rem;
 }
 
+/*
+COLOR PALETTE
+#96858F
+#6D7993
+#9099A2
+#D5D5D5
+ */
